# hasdim

./: README.md  brittany.yaml  haskit.json
Tour/: column.edh  dbcol.edh  table.edh
edh_modules/dim/: RT.edh  __init__.edh  __main__.edh  consts.edh  ctors.edh  dtypes.edh  effects.edh  misc.edh  ops.edh  symbols.edh
edh_modules/dim/dtypes/: effects.edh
edh_modules/dim/poc/: schema.edh
edh_modules/dim/primitive/: ops.edh
edh_modules/dim/tour/: __init__.edh
hasdim/: hasdim.cabal
hasdim/poc/: Schema.hs
hasdim/pub/Dim/: Batteries.hs  EHI.hs
hasdim/repl/: Main.hs  Repl.hs
hasdim/runmodu/: Main.hs
hasdim/src/Dim/: Array.hs  Column.hs  DataType.hs  Dim.hs  Fact.hs  Table.hs  Vector.hs  XCHG.hs
host.hs/: hasdim.cabal
host.hs/poc/: Schema.hs
host.hs/pub/Dim/: EHI.hs
host.hs/repl/: Main.hs  Repl.hs
host.hs/runfile/: Main.hs
host.hs/runmodu/: Main.hs  Repl.hs
host.hs/src/Dim/: ColArts.hs  ColDtArts.hs  Column.hs  DataType.hs  DbArray.hs  DbArts.hs  DiskBack.hs  DtArts.hs  EHI.hs  EvsArts.hs  EvsDtArts.hs  FlatArray.hs  Float.hs  Fold.hs  InMem.hs  Table.hs  Tensor.hs  XCHG.hs
host.hs/src/PoC/: Schema.hs
host.py/hasdim/: __init__.py  rt.py
poc/: schema.edh
