cabal-version: 2.4
name: hasdim
version: 0.1.0.0
license: BSD-3-Clause
copyright: Compl Yue
maintainer: compl.yue@icloud.com
author: Compl Yue
stability: experimental
homepage: https://github.com/e-wrks/hasdim
bug-reports: https://github.com/e-wrks/hasdim/issues
synopsis: Haskell Native Dimensional Data Modeling
description:
    Please see the README on Github at <https://github.com/e-wrks/hasdim>
category: Data Modeling
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/e-wrks/hasdim

library
    exposed-modules:
        Dim.EHI
    hs-source-dirs: pub
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings LambdaCase
                        BangPatterns TupleSections ScopedTypeVariables
    ghc-options: -Wall
    build-depends:
        hasdim-internal -any,
        base >=4.12,
        stm >=2.5,
        text -any,
        bytestring -any,
        unordered-containers -any,
        mtl -any,
        transformers -any,
        edh -any

executable hasdim
    main-is: Main.hs
    hs-source-dirs: repl
    other-modules:
        Repl
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings LambdaCase
                        BangPatterns TupleSections ScopedTypeVariables
    ghc-options: -Wall -threaded
    build-depends:
        base >=4.12,
        stm >=2.5,
        hasdim -any,
        nedh -any,
        edh -any,
        lossless-decimal -any,
        text -any,
        bytestring -any,
        mtl -any,
        transformers -any

library hasdim-poc
    exposed-modules:
        Schema
    hs-source-dirs: poc
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings LambdaCase
                        BangPatterns TupleSections ScopedTypeVariables
                        GADTs TypeFamilies FlexibleContexts FlexibleInstances
                        UndecidableInstances ConstrainedClassMethods
                        RankNTypes
    ghc-options: -Wall
    build-depends:
        hasdim-internal -any,
        base >=4.12,
        stm >=2.5,
        nedh -any,
        edh -any,
        lossless-decimal -any,
        scientific -any,
        binary -any,
        filepath -any,
        directory -any,
        hashable -any,
        unordered-containers -any,
        containers -any,
        primitive >= 0.2.1,
        vector >= 0.5,
        mmap >= 0.5.4,
        unix -any,
        time -any,
        clock -any,
        text -any,
        bytestring -any,
        mtl -any,
        transformers -any

library hasdim-internal
    exposed-modules:
        Dim.XCHG
        Dim.DataType
        Dim.Table
        Dim.Array
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings LambdaCase
                        BangPatterns TupleSections ScopedTypeVariables
                        GADTs FlexibleInstances UndecidableInstances
    ghc-options: -Wall
    build-depends:
        base >=4.12,
        stm >=2.5,
        nedh -any,
        edh -any,
        lossless-decimal -any,
        scientific -any,
        binary -any,
        filepath -any,
        directory -any,
        hashable -any,
        unordered-containers -any,
        containers -any,
        primitive >= 0.2.1,
        vector >= 0.5,
        mmap >= 0.5.4,
        unix -any,
        time -any,
        clock -any,
        text -any,
        bytestring -any,
        mtl -any,
        transformers -any
