cabal-version:      2.4
name:               hasdim
version:            0.1.0.0
license:            BSD-3-Clause
copyright:          Compl Yue
maintainer:         compl.yue@icloud.com
author:             Compl Yue
stability:          experimental
homepage:           https://github.com/e-wrks/hasdim
bug-reports:        https://github.com/e-wrks/hasdim/issues
synopsis:           Haskell Native Dimensional Data Modeling
description:
  Please see the README on Github at <https://github.com/e-wrks/hasdim>

category:           Data Modeling
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/e-wrks/hasdim
  subdir:   host.hs

executable hasdim
  main-is:            Main.hs
  hs-source-dirs:     repl
  other-modules:      Repl
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded -rtsopts
  build-depends:
    , base              >=4.12
    , bytestring
    , edh
    , hasdim
    , lossless-decimal
    , mtl
    , nedh
    , stm               >=2.5
    , text
    , transformers

executable rundim
  main-is:            Main.hs
  hs-source-dirs:     runfile
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded -rtsopts
  build-depends:
    , base              >=4.12
    , bytestring
    , edh
    , hasdim
    , lossless-decimal
    , mtl
    , nedh
    , stm               >=2.5
    , text
    , transformers

executable rundimm
  main-is:            Main.hs
  hs-source-dirs:     runmodu
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded -rtsopts
  build-depends:
    , base              >=4.12
    , bytestring
    , edh
    , hasdim
    , lossless-decimal
    , mtl
    , nedh
    , stm               >=2.5
    , text
    , transformers

library
  exposed-modules:
    Dim.EHI
  other-modules:
    Dim.ColArts
    Dim.Column
    Dim.DataType
    Dim.DbArray
    Dim.DbArts
    Dim.DiskBack
    Dim.Float
    Dim.InMem
    Dim.Table
    Dim.XCHG

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12
    , binary
    , bytestring
    , clock
    , containers
    , directory
    , edh
    , filepath
    , hashable
    , lossless-decimal
    , mmap                  >=0.5.4
    , mtl
    , nedh
    , primitive             >=0.2.1
    , scientific
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , vector                >=0.5
